# generic-list

./: CMakeLists.txt  README.md
include/list/: linked_list.h
unit-tests/: charptr.h  f64.h  list_f80.h  main.c  struct_pair.h  u32.h
